[gd_scene load_steps=47 format=3 uid="uid://ckl7nn55eok5r"]

[ext_resource type="Script" path="res://src/enemy.gd" id="1_n2cwp"]
[ext_resource type="Texture2D" uid="uid://dv4ofkslnphax" path="res://sprites/Head.png" id="1_y0k1h"]
[ext_resource type="Texture2D" uid="uid://bxik7211kyyne" path="res://sprites/OR.png" id="2_obnsk"]
[ext_resource type="Texture2D" uid="uid://bngnonw7n3ivi" path="res://sprites/AND.png" id="3_sfa51"]
[ext_resource type="Texture2D" uid="uid://do073uqtciny4" path="res://sprites/XOR.png" id="4_r5vnv"]
[ext_resource type="Texture2D" uid="uid://bfx60rimqg3sa" path="res://sprites/Halo1LeftBack.png" id="5_dnoud"]
[ext_resource type="Texture2D" uid="uid://bes650t0ol3tx" path="res://sprites/Halo2LeftBack.png" id="6_iafht"]
[ext_resource type="Texture2D" uid="uid://bbavxx8xfk8rx" path="res://sprites/HornBack.png" id="8_hu5kv"]
[ext_resource type="Texture2D" uid="uid://xsqsfx1vgkcd" path="res://sprites/HornMiddle.png" id="9_smepy"]
[ext_resource type="Texture2D" uid="uid://d038ux7ec8ccx" path="res://sprites/Halo1LeftFront.png" id="10_jqdbh"]
[ext_resource type="Texture2D" uid="uid://cb16mixii2tto" path="res://sprites/HornFront.png" id="10_whsoe"]
[ext_resource type="Texture2D" uid="uid://c30na7x3kovyj" path="res://sprites/Halo2LeftFront.png" id="11_ba4m8"]
[ext_resource type="Texture2D" uid="uid://0nmh5l5g3n7d" path="res://sprites/Halo1RightBack.png" id="12_f53lo"]
[ext_resource type="Texture2D" uid="uid://b1ddh7mrwbiht" path="res://sprites/Halo2RightBack.png" id="13_oy6yy"]
[ext_resource type="Texture2D" uid="uid://c5ctrmg2edqoq" path="res://sprites/Halo1RightFront.png" id="17_2oe8d"]
[ext_resource type="Texture2D" uid="uid://d1t56cv6e3okj" path="res://sprites/Halo2RightFront.png" id="18_tvk2y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_luauj"]
atlas = ExtResource("8_hu5kv")
region = Rect2(0, 0, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6pvo"]
atlas = ExtResource("8_hu5kv")
region = Rect2(1489, 0, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxcti"]
atlas = ExtResource("8_hu5kv")
region = Rect2(2978, 0, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_pv6in"]
atlas = ExtResource("8_hu5kv")
region = Rect2(4467, 0, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7tps"]
atlas = ExtResource("8_hu5kv")
region = Rect2(0, 1899, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_602mp"]
atlas = ExtResource("8_hu5kv")
region = Rect2(1489, 1899, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmmbm"]
atlas = ExtResource("8_hu5kv")
region = Rect2(2978, 1899, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_latfb"]
atlas = ExtResource("8_hu5kv")
region = Rect2(4467, 1899, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_55ai4"]
atlas = ExtResource("8_hu5kv")
region = Rect2(0, 3798, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ggij"]
atlas = ExtResource("8_hu5kv")
region = Rect2(1489, 3798, 1489, 1899)

[sub_resource type="SpriteFrames" id="SpriteFrames_rm7as"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_luauj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6pvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxcti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pv6in")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7tps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_602mp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmmbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_latfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55ai4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ggij")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_bimha"]
atlas = ExtResource("9_smepy")
region = Rect2(0, 0, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_5laq6"]
atlas = ExtResource("9_smepy")
region = Rect2(1489, 0, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_oagfg"]
atlas = ExtResource("9_smepy")
region = Rect2(2978, 0, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_s68co"]
atlas = ExtResource("9_smepy")
region = Rect2(0, 1899, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgp56"]
atlas = ExtResource("9_smepy")
region = Rect2(1489, 1899, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhm0a"]
atlas = ExtResource("9_smepy")
region = Rect2(2978, 1899, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gkyc"]
atlas = ExtResource("9_smepy")
region = Rect2(0, 3798, 1489, 1899)

[sub_resource type="SpriteFrames" id="SpriteFrames_bhilt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bimha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5laq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oagfg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s68co")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgp56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhm0a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gkyc")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_5phk7"]
atlas = ExtResource("10_whsoe")
region = Rect2(0, 0, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybv2o"]
atlas = ExtResource("10_whsoe")
region = Rect2(1489, 0, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1s4n"]
atlas = ExtResource("10_whsoe")
region = Rect2(2978, 0, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3tva"]
atlas = ExtResource("10_whsoe")
region = Rect2(4467, 0, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_jv85x"]
atlas = ExtResource("10_whsoe")
region = Rect2(0, 1899, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_113wg"]
atlas = ExtResource("10_whsoe")
region = Rect2(1489, 1899, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqq3u"]
atlas = ExtResource("10_whsoe")
region = Rect2(2978, 1899, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_582sp"]
atlas = ExtResource("10_whsoe")
region = Rect2(4467, 1899, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbrro"]
atlas = ExtResource("10_whsoe")
region = Rect2(0, 3798, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_pc7pb"]
atlas = ExtResource("10_whsoe")
region = Rect2(1489, 3798, 1489, 1899)

[sub_resource type="SpriteFrames" id="SpriteFrames_03n25"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5phk7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybv2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1s4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3tva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jv85x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_113wg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqq3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_582sp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbrro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pc7pb")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="Enemy" type="Node2D"]
script = ExtResource("1_n2cwp")
metadata/_edit_group_ = true

[node name="Head" type="Sprite2D" parent="."]
texture = ExtResource("1_y0k1h")

[node name="LogicalOR" type="Sprite2D" parent="."]
texture = ExtResource("2_obnsk")

[node name="LogicalAND" type="Sprite2D" parent="."]
texture = ExtResource("3_sfa51")

[node name="LogicalXOR" type="Sprite2D" parent="."]
texture = ExtResource("4_r5vnv")

[node name="Halo1LeftBack" type="Sprite2D" parent="."]
texture = ExtResource("5_dnoud")

[node name="Halo2LeftBack" type="Sprite2D" parent="."]
texture = ExtResource("6_iafht")

[node name="HornLeftBack" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_rm7as")
frame = 9

[node name="HornLeftMiddle" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_bhilt")
frame = 6

[node name="HornLeftFront" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_03n25")
frame = 9

[node name="Halo1LeftFront" type="Sprite2D" parent="."]
texture = ExtResource("10_jqdbh")

[node name="Halo2LeftFront" type="Sprite2D" parent="."]
texture = ExtResource("11_ba4m8")

[node name="Halo1RightBack" type="Sprite2D" parent="."]
texture = ExtResource("12_f53lo")

[node name="Halo2RightBack" type="Sprite2D" parent="."]
texture = ExtResource("13_oy6yy")

[node name="HornRightBack" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_rm7as")
frame = 9
flip_h = true

[node name="HornRightMiddle" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_bhilt")
frame = 6
flip_h = true

[node name="HornRightFront" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_03n25")
frame = 9
flip_h = true

[node name="Halo1RightFront" type="Sprite2D" parent="."]
texture = ExtResource("17_2oe8d")

[node name="Halo2RightFront" type="Sprite2D" parent="."]
texture = ExtResource("18_tvk2y")
